--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -3,13 +3,13 @@
 
 # For Console cores make sure you are using the recommended folder structure: /media/fat/Games/SNES/ etc.
 # The script supports zipped Everdrive packs or unzipped folders.
-# For MegaCD and Turbografx16 CD your games need to be in CHD format.
+# For PSX, MegaCD and Turbografx16 CD your games need to be in CHD format.
 
 # ======== GENERAL OPTIONS ========
 
-# Time before Super Attract Mode starts in seconds
+# Time before Super Attract Mode starts in seconds. On reboot it will wait an additional minute for all services to load up. So SAM comes on at 60s + samtimeout
 # 300 = 5 minutes, 600 = 10 minutes, 900 = 15 minutes
-samtimeout=60
+samtimeout=20
 
 # Time before going to the next core in seconds
 gametimer=120
@@ -18,36 +18,9 @@ gametimer=120
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode? 
-# Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd
-corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd"
+# Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd (not working with mgl) psx
+corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd,psx"
 
-
-# ======== CONSOLE OPTIONS ========
-# Use the ZIP files in your game directories
-usezip="Yes"
-
-# Disable bootroms directory so your default games don't boot during Attract Mode cycles 
-disablebootrom="Yes"
-
-# ======== CONSOLE WHITELISTS ========
-# You can specify a list of console games you would like to display
-# by creating the files below; missing or empty files are ignored.
-# Each file should have one game per line and use Unix-style line endings.
-# Game names are not case-sensitive.
-gbawhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_gba.txt"
-genesiswhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_genesis.txt"
-megacdwhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_megacd.txt"
-neogeowhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_neogeo.txt"
-neswhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_nes.txt"
-sneswhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_snes.txt"
-tgfx16whitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_tgfx16.txt"
-tgfx16cdwhitelist="/media/fat/Scripts/MiSTer_SAM_whitelist_tgfx16cd.txt"
-
-# ======== ARCADE OPTIONS ========
-# Custom List of Arcade MRA Files
-# You can specify a list of Arcade Games you would like to display
-# Or exclude Games instead in the next setting
-#mralist="/media/fat/Scripts/MiSTer_SAM_mras.txt"
 
 #======== EXCLUDE LISTS ========
 # One game per line
@@ -89,11 +62,11 @@ tgfx16cdexclude="First Bad Game.chd
 Second Bad Game.chd
 Third Bad Game.chd"
 
-#======== FOLDER EXCLUSION ========
+# FOLDER EXCLUSION
 # Folders you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path name.
 # Partial names with case insensitive spelling will suffice. 
-folderexclude=( vgm eu nsf other nes2pce fds spc unsupported )
 
+folderexclude=( vgm eu nsf other nes2pce fds spc unsupported )
 
 # ======== ADVANCED (HANDLE WITH CARE) ========
 # When you push a button or move the mouse, interrupt SAM
@@ -101,25 +74,17 @@ folderexclude=( vgm eu nsf other nes2pce fds spc unsupported )
 # SAM tries to listen for controller buttons, mouse movement, mouse buttons, and keyboard input
 # SAM attempts to detect newly added controllers and mice for monitoring
 # Note: Not all devices will be recognized - notably BlisSTer controllers in LLAPI mode, BT controllers and SNAC devices	
+
 listenmouse="Yes"
 listenkeyboard="Yes"
 listenjoy="Yes"
 
-# This will probably break things if you try to adjust the following settings
-mrsampath="/media/fat/Scripts/.MiSTer_SAM"
-misterpath="/media/fat"
-
 # ======== GAME PATHS ========
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
-
 # Default - all arcade games
-arcadepath="/media/fat/_arcade"
 # Uncomment below to use only rotated games
-#arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Vertical (CW)" 
-#arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Vertical (CCW)" 
-#arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal (180)" 
-#arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
-
+# arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
+arcadepath="/media/fat/_arcade"
 gbapath="/media/fat/games/GBA"
 genesispath="/media/fat/games/Genesis"
 megacdpath="/media/fat/games/MegaCD"
@@ -128,12 +93,17 @@ nespath="/media/fat/games/NES"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
+psxpath="/media/fat/games/PSX"
 
 # ======== TTY2OLED =======
 # Options for https://github.com/venice1200/MiSTer_tty2oled
 # usetty="Yes" shows the text name of the game being played - NOT the standard core name graphic
 ttyenable="No"
 ttydevice="/dev/ttyUSB0"
+
+
+# Use the ZIP files in your game directories. It's best to leave it untouched.
+usezip="Yes"
 
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
@@ -144,12 +114,6 @@ ttydevice="/dev/ttyUSB0"
 
 # Should SAM be quiet - disable for extra logging - only useful via ssh
 #samquiet="No"
-#samdebug="Yes"
-#samtrace="Yes"
-
-# GitHub repository to download updates from
-# Change this to use your own fork
-#repository_url="https://github.com/mrchrisster/MiSTer_SAM"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
