Add fds support

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -19,7 +19,7 @@ menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd (not working with mgl) psx
-corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd,psx"
+corelist="arcade,fds,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd,psx"
 
 
 #======== EXCLUDE LISTS ========
@@ -29,6 +29,10 @@ corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd,psx"
 arcadeexclude="First Bad Game.mra
 Second Bad Game.mra
 Third Bad Game.mra"
+
+fdsexclude="First Bad Game.chd
+Second Bad Game.chd
+Third Bad Game.chd"
 
 gbaexclude="First Bad Game.gba
 Second Bad Game.gba
@@ -62,6 +66,10 @@ tgfx16cdexclude="First Bad Game.chd
 Second Bad Game.chd
 Third Bad Game.chd"
 
+psxexclude="First Bad Game.chd
+Second Bad Game.chd
+Third Bad Game.chd"
+
 # FOLDER EXCLUSION
 # Folders you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path name.
 # Partial names with case insensitive spelling will suffice. 
@@ -85,6 +93,7 @@ listenjoy="Yes"
 # Uncomment below to use only rotated games
 # arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 arcadepath="/media/fat/_arcade"
+fdspath="/media/fat/games/NES"
 gbapath="/media/fat/games/GBA"
 genesispath="/media/fat/games/Genesis"
 megacdpath="/media/fat/games/MegaCD"
