--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -109,6 +109,8 @@ psxpath="/media/fat/games/PSX"
 # usetty="Yes" shows the text name of the game being played - NOT the standard core name graphic
 ttyenable="No"
 ttydevice="/dev/ttyUSB0"
+ttypicture="/media/fat/tty2oled/pics"          
+ttypicture_pri="/media/fat/tty2oled/pics_pri"   
 
 
 # Use the ZIP files in your game directories. It's best to leave it untouched.
