tty2oled Support Updates

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -107,10 +107,10 @@ psxpath="/media/fat/games/PSX"
 # ======== TTY2OLED =======
 # Options for https://github.com/venice1200/MiSTer_tty2oled
 # usetty="Yes" shows the text name of the game being played - NOT the standard core name graphic
+# All needed values are read from the tty2oled INI files
 ttyenable="No"
-ttydevice="/dev/ttyUSB0"
-ttypicture="/media/fat/tty2oled/pics"          
-ttypicture_pri="/media/fat/tty2oled/pics_pri"   
+ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
+ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 
 
 # Use the ZIP files in your game directories. It's best to leave it untouched.
