--- a/.github/workflows/change-hash.yml
+++ b/.github/workflows/change-hash.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Commit files # transfer the new html files back into the repository
       run: |
         git config --local user.name "mrchrisster"
-        git add ./docs
+        git add MiSTer_SAMdb.json
         git commit -m "Updating the db file for update all"
     - name: Push changes # push the output folder to your repo
       uses: ad-m/github-push-action@master
