--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -123,11 +123,11 @@ usezip="Yes"
 
 # Will SAM MCP wait 60 seconds before checking for activity
 # Used to overcome startup clock issues
-#startupsleep="No"
+startupsleep="Yes"
 
 # Should SAM be quiet - disable for extra logging - only useful via ssh
-samquiet="No"
+samquiet="Yes"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
-#branch="test"
+branch="main"
