--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -74,7 +74,7 @@ Third Bad Game.chd"
 # Folders you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path name.
 # Partial names with case insensitive spelling will suffice. 
 
-folderexclude=( vgm eu nsf other nes2pce spc unsupported )
+folderexclude=( vgm eu nsf other nes2pce spc hbmame unsupported )
 
 # ======== ADVANCED (HANDLE WITH CARE) ========
 # When you push a button or move the mouse, interrupt SAM
