--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -113,7 +113,7 @@ ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 
 # SAM will play every game on your system once before starting from the beginning (currently not supported for zip games)
-loopall="Yes"
+shuffleall="Yes"
 
 # Use the ZIP files in your game directories. It's best to leave it untouched.
 usezip="Yes"
