--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -18,7 +18,7 @@ gametimer=120
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode? 
-# Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd (not working with mgl) psx
+# Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd psx
 corelist="arcade,fds,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd,psx"
 
 
