--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -108,7 +108,7 @@ psxpath="/media/fat/games/PSX"
 # Options for https://github.com/venice1200/MiSTer_tty2oled
 # usetty="Yes" shows the text name of the game being played - NOT the standard core name graphic
 # All needed values are read from the tty2oled INI files
-ttyenable="Yes"
+ttyenable="No"
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 
