--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -112,7 +112,7 @@ ttyenable="No"
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 
-# SAM will play every game on your system once before starting from the beginning (currently not supported for zip games)
+# SAM will play every game on your system once before starting from the beginning
 norepeat="Yes"
 
 # Use the ZIP files in your game directories. It's best to leave it untouched.
@@ -120,10 +120,6 @@ usezip="Yes"
 
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
-
-# Will SAM MCP wait 60 seconds before checking for activity
-# Used to overcome startup clock issues
-startupsleep="Yes"
 
 # Should SAM be quiet - disable for extra logging - only useful via ssh
 samquiet="Yes"
