sms and gg update

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -12,15 +12,14 @@
 samtimeout=20
 
 # Time before going to the next core in seconds
-gametimer=120
+gametimer=80
 
 # Start SAM only from MiSTer main menu
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode? 
-# Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd (not working with mgl) psx
-corelist="arcade,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd,psx"
-
+# Valid options: arcade gba genesis gg megacd neogeo nes sms snes tgfx16 tgfx16cd psx
+corelist="arcade,fds,gba,genesis,gg,megacd,neogeo,nes,sms,snes,tgfx16,tgfx16cd,psx"
 
 #======== EXCLUDE LISTS ========
 # One game per line
@@ -30,13 +29,21 @@ arcadeexclude="First Bad Game.mra
 Second Bad Game.mra
 Third Bad Game.mra"
 
+fdsexclude="First Bad Game.chd
+Second Bad Game.chd
+Third Bad Game.chd"
+
 gbaexclude="First Bad Game.gba
 Second Bad Game.gba
 Third Bad Game.gba"
 
-genesisexclude="First Bad Game.gen
-Second Bad Game.gen
-Third Bad Game.gen"
+genesisexclude="First Bad Game.md
+Second Bad Game.md
+Third Bad Game.md"
+
+ggexclude="First Bad Game.gg
+Second Bad Game.gg
+Third Bad Game.gg"
 
 megacdexclude="First Bad Game.chd
 Second Bad Game.chd
@@ -50,6 +57,10 @@ nesexclude="First Bad Game.nes
 Second Bad Game.nes
 Third Bad Game.nes"
 
+smsexclude="First Bad Game.sms
+Second Bad Game.sms
+Third Bad Game.sms"
+
 snesexclude="First Bad Game.sfc
 Second Bad Game.sfc
 Third Bad Game.sfc"
@@ -62,11 +73,15 @@ tgfx16cdexclude="First Bad Game.chd
 Second Bad Game.chd
 Third Bad Game.chd"
 
+psxexclude="First Bad Game.chd
+Second Bad Game.chd
+Third Bad Game.chd"
+
 # FOLDER EXCLUSION
 # Folders you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path name.
 # Partial names with case insensitive spelling will suffice. 
 
-folderexclude=( vgm eu nsf other nes2pce fds spc unsupported )
+folderexclude=( vgm eu nsf other nes2pce spc hbmame unsupported )
 
 # ======== ADVANCED (HANDLE WITH CARE) ========
 # When you push a button or move the mouse, interrupt SAM
@@ -85,11 +100,14 @@ listenjoy="Yes"
 # Uncomment below to use only rotated games
 # arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 arcadepath="/media/fat/_arcade"
+fdspath="/media/fat/games/NES"
 gbapath="/media/fat/games/GBA"
 genesispath="/media/fat/games/Genesis"
+ggpath="/media/fat/games/SMS"
 megacdpath="/media/fat/games/MegaCD"
 neogeopath="/media/fat/games/NeoGeo"
 nespath="/media/fat/games/NES"
+smspath"/media/fat/Games/SMS"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
@@ -98,9 +116,13 @@ psxpath="/media/fat/games/PSX"
 # ======== TTY2OLED =======
 # Options for https://github.com/venice1200/MiSTer_tty2oled
 # usetty="Yes" shows the text name of the game being played - NOT the standard core name graphic
+# All needed values are read from the tty2oled INI files
 ttyenable="No"
-ttydevice="/dev/ttyUSB0"
+ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
+ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 
+# SAM will play every game on your system once before starting from the beginning
+norepeat="Yes"
 
 # Use the ZIP files in your game directories. It's best to leave it untouched.
 usezip="Yes"
@@ -108,13 +130,9 @@ usezip="Yes"
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
 
-# Will SAM MCP wait 60 seconds before checking for activity
-# Used to overcome startup clock issues
-#startupsleep="No"
-
 # Should SAM be quiet - disable for extra logging - only useful via ssh
-#samquiet="No"
+samquiet="Yes"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
-#branch="test"
+branch="test"
