--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -12,15 +12,14 @@
 samtimeout=20
 
 # Time before going to the next core in seconds
-gametimer=120
+gametimer=80
 
 # Start SAM only from MiSTer main menu
 menuonly="Yes"
 
 # Which systems would you like to display in Attract Mode? 
-# Valid options: arcade gba genesis megacd neogeo nes snes tgfx16 tgfx16cd psx
-corelist="arcade,fds,gba,genesis,megacd,neogeo,nes,snes,tgfx16,tgfx16cd,psx"
-
+# Valid options: arcade gba genesis gg megacd neogeo nes snes sms tgfx16 tgfx16cd psx
+corelist="arcade,fds,gba,genesis,gg,megacd,neogeo,nes,sms,snes,tgfx16,tgfx16cd,psx"
 
 #======== EXCLUDE LISTS ========
 # One game per line
@@ -38,9 +37,13 @@ gbaexclude="First Bad Game.gba
 Second Bad Game.gba
 Third Bad Game.gba"
 
-genesisexclude="First Bad Game.gen
-Second Bad Game.gen
-Third Bad Game.gen"
+genesisexclude="First Bad Game.md
+Second Bad Game.md
+Third Bad Game.md"
+
+ggexclude="First Bad Game.gg
+Second Bad Game.gg
+Third Bad Game.gg"
 
 megacdexclude="First Bad Game.chd
 Second Bad Game.chd
@@ -53,6 +56,10 @@ Third Bad Game.neo"
 nesexclude="First Bad Game.nes
 Second Bad Game.nes
 Third Bad Game.nes"
+
+smsexclude="First Bad Game.sms
+Second Bad Game.sms
+Third Bad Game.sms"
 
 snesexclude="First Bad Game.sfc
 Second Bad Game.sfc
@@ -96,9 +103,11 @@ arcadepath="/media/fat/_arcade"
 fdspath="/media/fat/games/NES"
 gbapath="/media/fat/games/GBA"
 genesispath="/media/fat/games/Genesis"
+ggpath="/media/fat/games/SMS"
 megacdpath="/media/fat/games/MegaCD"
 neogeopath="/media/fat/games/NeoGeo"
 nespath="/media/fat/games/NES"
+smspath"/media/fat/Games/SMS"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
