--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -107,7 +107,7 @@ ggpath="/media/fat/games/SMS"
 megacdpath="/media/fat/games/MegaCD"
 neogeopath="/media/fat/games/NeoGeo"
 nespath="/media/fat/games/NES"
-smspath"/media/fat/Games/SMS"
+smspath="/media/fat/Games/SMS"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
