--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -129,6 +129,7 @@ usezip="Yes"
 
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
+samtrace="No"
 
 # Should SAM be quiet - disable for extra logging - only useful via ssh
 samquiet="Yes"
