--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -17,6 +17,9 @@ gametimer=80
 # Start SAM only from MiSTer main menu
 menuonly="Yes"
 
+# When SAM starts, mute global Volume. Unmute when button is pushed.
+mute="Yes"
+
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis gg megacd neogeo nes snes sms tgfx16 tgfx16cd psx
 corelist="arcade,fds,gba,genesis,gg,megacd,neogeo,nes,sms,snes,tgfx16,tgfx16cd,psx"
