--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -127,11 +127,14 @@ ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 # SAM will play every game on your system once before starting from the beginning
 norepeat="Yes"
 
-# Use the ZIP files in your game directories. It's best to leave it untouched.
-usezip="Yes"
-
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
+
+# Use the ZIP files in your game directories. SAM handles ZIP use automatically so this doesn't really need to be changed. 
+# Can be used to find issues with rom detection in SAM.
+usezip="Yes"
+
+# Show variables
 samtrace="No"
 
 # Should SAM be quiet - disable for extra logging - only useful via ssh
