--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -20,6 +20,11 @@ menuonly="Yes"
 # When SAM starts, mute global Volume. Unmute when button is pushed.
 mute="Yes"
 
+# If "mute=Yes", what should happen when button is pushed?
+# "playcurrentgame=Yes" - SAM will relaunch the current game with sound
+# "playcurrentgame=No" - SAM will reboot to MiSTer Menu
+playcurrentgame="No" 
+
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis gg megacd neogeo nes snes sms tgfx16 tgfx16cd psx
 corelist="arcade,fds,gba,genesis,gg,megacd,neogeo,nes,sms,snes,tgfx16,tgfx16cd,psx"
