--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -9,7 +9,7 @@
 
 # Time before Super Attract Mode starts in seconds. On reboot it will wait an additional minute for all services to load up. So SAM comes on at 60s + samtimeout
 # 300 = 5 minutes, 600 = 10 minutes, 900 = 15 minutes
-samtimeout=20
+samtimeout=45
 
 # Time before going to the next core in seconds
 gametimer=180
@@ -21,8 +21,8 @@ menuonly="Yes"
 mute="Yes"
 
 # If "mute=Yes", what should happen when button is pushed?
-# "playcurrentgame=Yes" - SAM will relaunch the current game with sound
-# "playcurrentgame=No" - SAM will reboot to MiSTer Menu
+# playcurrentgame="Yes" - SAM will relaunch the current game with sound
+# playcurrentgame="No" - SAM will reboot to MiSTer Menu
 playcurrentgame="No" 
 
 # Which systems would you like to display in Attract Mode? 
@@ -135,8 +135,7 @@ norepeat="Yes"
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
 
-# Use the ZIP files in your game directories. SAM handles ZIP use automatically so this doesn't really need to be changed. 
-# Can be used to find issues with rom detection in SAM.
+# Can be used to find issues with rom detection in SAM. Set to No to ignore zip files in your directory
 usezip="Yes"
 
 # Show variables
