--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -27,7 +27,7 @@ playcurrentgame="No"
 
 # Which systems would you like to display in Attract Mode? 
 # Valid options: arcade gba genesis gg megacd neogeo nes snes sms tgfx16 tgfx16cd psx
-corelist="arcade,fds,gba,genesis,gg,megacd,neogeo,nes,sms,snes,tgfx16,tgfx16cd,psx"
+corelist="arcade,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 #======== EXCLUDE LISTS ========
 # One game per line
@@ -64,6 +64,10 @@ Third Bad Game.neo"
 nesexclude="First Bad Game.nes
 Second Bad Game.nes
 Third Bad Game.nes"
+
+s32xexclude="First Bad Game.32x
+Second Bad Game.32x
+Third Bad Game.32x"
 
 smsexclude="First Bad Game.sms
 Second Bad Game.sms
@@ -115,6 +119,7 @@ ggpath="/media/fat/games/SMS"
 megacdpath="/media/fat/games/MegaCD"
 neogeopath="/media/fat/games/NeoGeo"
 nespath="/media/fat/games/NES"
+s32xpath="/media/fat/Games/Genesis"
 smspath="/media/fat/Games/SMS"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
