--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -113,6 +113,8 @@ listenjoy="Yes"
 # arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 arcadepath="/media/fat/_arcade"
 fdspath="/media/fat/games/NES"
+gbpath="/media/fat/Games/Gameboy"
+gbcpath="/media/fat/Games/Gameboy"
 gbapath="/media/fat/games/GBA"
 genesispath="/media/fat/games/Genesis"
 ggpath="/media/fat/games/SMS"
