--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -26,7 +26,7 @@ mute="Yes"
 playcurrentgame="No" 
 
 # Which systems would you like to display in Attract Mode? 
-# Valid options: arcade gba genesis gg megacd neogeo nes snes sms tgfx16 tgfx16cd psx
+# Valid options: arcade gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
 corelist="arcade,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 #======== EXCLUDE LISTS ========
