--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -135,6 +135,7 @@ psxpath="/media/fat/games/PSX"
 ttyenable="No"
 ttysystemini="/media/fat/tty2oled/tty2oled-system.ini"
 ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
+ttyuseack="No"
 
 # SAM will play every game on your system once before starting from the beginning
 norepeat="Yes"
