--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -143,6 +143,9 @@ norepeat="Yes"
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
 
+# Having issues with using game lists? Turn them off! Note: You won't have features like norepeat shuffle, exclusion lists and load times will also be longer.
+gamelist="Yes"
+
 # Can be used to find issues with rom detection in SAM. Set to No to ignore zip files in your directory
 usezip="Yes"
 
