Add Handling for extended Paths
Also fix mgl creation

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -113,8 +113,6 @@ listenjoy="Yes"
 usedefaultpaths="Yes"
 
 # Default - all arcade games
-# Uncomment below to use only rotated games
-# arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 arcadepath="/media/fat/_arcade"
 fdspath="/media/fat/games/NES"
 gbpath="/media/fat/Games/Gameboy"
@@ -131,6 +129,44 @@ snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
 psxpath="/media/fat/games/PSX"
+
+#======== CORE PATHS Extra ========
+# Uncomment below to use only rotated games
+# arcadepathextra="_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
+arcadepathextra=""
+fdspathextra="Games/FDS"
+gbpathextra="Games/GB"
+gbcpathextra="Games/GBC"
+gbapathextra="Games"
+genesispathextra="Games"
+ggpathextra="Games/GG"
+megacdpathextra="chd"
+neogeopathextra="Games"
+nespathextra="Games/NES"
+s32xpathextra="Games"
+smspathextra="Games/SMS"
+snespathextra="Games"
+tgfx16pathextra="Games/TGFX16"
+tgfx16cdpathextra="chd"
+psxpathextra="chd"
+
+#======== CORE PATHS RBF ========
+arcadepathrbf="_Arcade"
+fdspathrbf="_Console"
+gbpathrbf="_Console"
+gbcpathrbf="_Console"
+gbapathrbf="_Console"
+genesispathrbf="_Console"
+ggpathrbf="_Console"
+megacdpathrbf="_Console"
+neogeopathrbf="_Console"
+nespathrbf="_Console"
+s32xpathrbf="_Console"
+smspathrbf="_Console"
+snespathrbf="_Console"
+tgfx16pathrbf="_Console"
+tgfx16cdpathrbf="_Console"
+psxpathrbf="_Console"
 
 # ======== TTY2OLED =======
 # Options for https://github.com/venice1200/MiSTer_tty2oled
