Various fixes and trailing whitespace cleanup.

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -23,10 +23,10 @@ mute="Yes"
 # If "mute=Yes", what should happen when button is pushed?
 # playcurrentgame="Yes" - SAM will relaunch the current game with sound
 # playcurrentgame="No" - SAM will reboot to MiSTer Menu
-playcurrentgame="No" 
+playcurrentgame="No"
 
-# Which systems would you like to display in Attract Mode? 
-# Valid options: arcade gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
+# Which systems would you like to display in Attract Mode?
+# Valid options: arcade fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
 corelist="arcade,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 #======== EXCLUDE LISTS ========
@@ -37,9 +37,9 @@ arcadeexclude="First Bad Game.mra
 Second Bad Game.mra
 Third Bad Game.mra"
 
-fdsexclude="First Bad Game.chd
-Second Bad Game.chd
-Third Bad Game.chd"
+fdsexclude="First Bad Game.fds
+Second Bad Game.fds
+Third Bad Game.fds"
 
 gbaexclude="First Bad Game.gba
 Second Bad Game.gba
@@ -91,7 +91,7 @@ Third Bad Game.chd"
 
 # FOLDER EXCLUSION
 # Folders you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path name.
-# Partial names with case insensitive spelling will suffice. 
+# Partial names with case insensitive spelling will suffice.
 
 folderexclude=( vgm eu nsf other nes2pce spc hbmame unsupported )
 
@@ -100,7 +100,7 @@ folderexclude=( vgm eu nsf other nes2pce spc hbmame unsupported )
 
 # SAM tries to listen for controller buttons, mouse movement, mouse buttons, and keyboard input
 # SAM attempts to detect newly added controllers and mice for monitoring
-# Note: Not all devices will be recognized - notably BlisSTer controllers in LLAPI mode, BT controllers and SNAC devices	
+# Note: Not all devices will be recognized - notably BlisSTer controllers in LLAPI mode, BT controllers and SNAC devices
 
 listenmouse="Yes"
 listenkeyboard="Yes"
@@ -115,7 +115,7 @@ usedefaultpaths="Yes"
 # Default - all arcade games
 # Uncomment below to use only rotated games
 # arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
-arcadepath="/media/fat/_arcade"
+arcadepath="/media/fat/_Arcade"
 fdspath="/media/fat/games/NES"
 gbpath="/media/fat/Games/Gameboy"
 gbcpath="/media/fat/Games/Gameboy"
