--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -1,11 +1,11 @@
-# ======== NOTES ========
+# -------- NOTES --------
 # Arcade core will work on most systems using Update_All
 
 # For Console cores make sure you are using the recommended folder structure: /media/fat/Games/SNES/ etc.
 # The script supports zipped Everdrive packs or unzipped folders.
 # For PSX, MegaCD and Turbografx16 CD your games need to be in CHD format.
 
-# ======== GENERAL OPTIONS ========
+# -------- GENERAL OPTIONS --------
 
 # Time before Super Attract Mode starts in seconds. On reboot it will wait an additional minute for all services to load up. So SAM comes on at 60s + samtimeout
 # 300 = 5 minutes, 600 = 10 minutes, 900 = 15 minutes
@@ -29,7 +29,7 @@ playcurrentgame="No"
 # Valid options: arcade fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
 corelist="arcade,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
-#======== EXCLUDE LISTS ========
+#-------- EXCLUDE LISTS --------
 # One game per line
 # Trailing quote is required!
 
@@ -95,7 +95,7 @@ Third Bad Game.chd"
 
 folderexclude=( vgm eu nsf other nes2pce spc hbmame unsupported )
 
-# ======== ADVANCED (HANDLE WITH CARE) ========
+# -------- ADVANCED (HANDLE WITH CARE) --------
 # When you push a button or move the mouse, interrupt SAM
 
 # SAM tries to listen for controller buttons, mouse movement, mouse buttons, and keyboard input
@@ -106,7 +106,7 @@ listenmouse="Yes"
 listenkeyboard="Yes"
 listenjoy="Yes"
 
-# ======== GAME PATHS ========
+# -------- GAME PATHS --------
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
 # Uses the default rom locations that MiSTer and all cores use by default
 # This allows you to have your roms in /media/usb0/games, for example, without needing to edit the paths, below.
@@ -132,7 +132,7 @@ tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
 psxpath="/media/fat/games/PSX"
 
-#======== CORE PATHS Extra ========
+#-------- CORE PATHS Extra --------
 # Uncomment below to use only rotated games
 # arcadepathextra="_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 arcadepathextra=""
@@ -152,7 +152,7 @@ tgfx16pathextra="Games/TGFX16"
 tgfx16cdpathextra="chd"
 psxpathextra="chd"
 
-#======== CORE PATHS RBF ========
+#-------- CORE PATHS RBF --------
 arcadepathrbf="_Arcade"
 fdspathrbf="_Console"
 gbpathrbf="_Console"
@@ -170,7 +170,7 @@ tgfx16pathrbf="_Console"
 tgfx16cdpathrbf="_Console"
 psxpathrbf="_Console"
 
-# ======== TTY2OLED =======
+# -------- TTY2OLED -------
 # Options for https://github.com/venice1200/MiSTer_tty2oled
 # usetty="Yes" shows the text name of the game being played - NOT the standard core name graphic
 # All needed values are read from the tty2oled INI files
@@ -182,7 +182,7 @@ ttyuseack="Yes"
 # SAM will play every game on your system once before starting from the beginning
 norepeat="Yes"
 
-# ======== DEBUG ========
+# -------- DEBUG --------
 # These are intended for debugging SAM - use with care!
 
 # Having issues with using game lists? Turn them off! Note: You won't have features like norepeat shuffle, exclusion lists and load times will also be longer.
