--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -89,11 +89,11 @@ psxexclude="First Bad Game.chd
 Second Bad Game.chd
 Third Bad Game.chd"
 
-# FOLDER EXCLUSION
-# Folders you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path name.
+# FOLDER AND FILE EXCLUSION
+# Folders and files you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path or file name.
 # Partial names with case insensitive spelling will suffice.
 
-folderexclude=( vgm eu nsf other nes2pce spc hbmame unsupported )
+exclude=( vgm nsf nes2pce spc unsupported )
 
 # -------- ADVANCED (HANDLE WITH CARE) --------
 # When you push a button or move the mouse, interrupt SAM
