--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -136,21 +136,21 @@ psxpath="/media/fat/games/PSX"
 # Uncomment below to use only rotated games
 # arcadepathextra="_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 arcadepathextra=""
-fdspathextra="Games/FDS"
-gbpathextra="Games/GB"
-gbcpathextra="Games/GBC"
-gbapathextra="Games"
-genesispathextra="Games"
-ggpathextra="Games/GG"
-megacdpathextra="chd"
-neogeopathextra="Games"
-nespathextra="Games/NES"
-s32xpathextra="Games"
-smspathextra="Games/SMS"
-snespathextra="Games"
-tgfx16pathextra="Games/TGFX16"
-tgfx16cdpathextra="chd"
-psxpathextra="chd"
+fdspathextra=""
+gbpathextra=""
+gbcpathextra=""
+gbapathextra=""
+genesispathextra=""
+ggpathextra=""
+megacdpathextra=""
+neogeopathextra=""
+nespathextra=""
+s32xpathextra=""
+smspathextra=""
+snespathextra=""
+tgfx16pathextra=""
+tgfx16cdpathextra=""
+psxpathextra=""
 
 #-------- CORE PATHS RBF --------
 arcadepathrbf="_Arcade"
