--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -132,9 +132,8 @@ tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
 psxpath="/media/fat/games/PSX"
 
-#-------- CORE PATHS Extra --------
-# Uncomment below to use only rotated games
-# arcadepathextra="_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
+#-------- CORE PATHS EXTRA --------
+
 arcadepathextra=""
 fdspathextra=""
 gbpathextra=""
