--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -18,7 +18,7 @@ gametimer=180
 menuonly="Yes"
 
 # When SAM starts, mute global Volume. Unmute when button is pushed.
-mute="Yes"
+mute="No"
 
 # If "mute=Yes", what should happen when button is pushed?
 # playcurrentgame="Yes" - SAM will relaunch the current game with sound
