Some quick error fixes
If the user wants to only use roms in a subfolder of the main rom directory, it must be added in the pathextra fields

Somehow the genesis/s32x mix up got missed in the ini file, in a previous commit

echo left out of the stop commandline option

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -113,8 +113,6 @@ listenjoy="Yes"
 usedefaultpaths="No"
 
 # Default - all arcade games
-# Uncomment below to use only rotated games
-# arcadepath="/media/fat/_Arcade/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 arcadepath="/media/fat/_Arcade"
 fdspath="/media/fat/games/NES"
 gbpath="/media/fat/Games/Gameboy"
@@ -125,7 +123,7 @@ ggpath="/media/fat/games/SMS"
 megacdpath="/media/fat/games/MegaCD"
 neogeopath="/media/fat/games/NeoGeo"
 nespath="/media/fat/games/NES"
-s32xpath="/media/fat/Games/Genesis"
+s32xpath="/media/fat/Games/S32X"
 smspath="/media/fat/Games/SMS"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
@@ -134,6 +132,8 @@ psxpath="/media/fat/games/PSX"
 
 #-------- CORE PATHS EXTRA --------
 
+# Uncomment below to use only rotated games
+# arcadepathextra="_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 arcadepathextra=""
 fdspathextra=""
 gbpathextra=""
