--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -131,9 +131,9 @@ tgfx16cdpath="/media/fat/games/TGFX16-CD"
 psxpath="/media/fat/games/PSX"
 
 #-------- CORE PATHS EXTRA --------
-
+# Path must begin with /
 # Uncomment below to use only rotated games
-# arcadepathextra="_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
+# arcadepathextra="/_Organized/_4 Video & Inputs/_2 Rotation/_Horizontal"
 arcadepathextra=""
 fdspathextra=""
 gbpathextra=""
