--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -168,6 +168,13 @@ snespathrbf="_Console"
 tgfx16pathrbf="_Console"
 tgfx16cdpathrbf="_Console"
 psxpathrbf="_Console"
+psxpathrbf="_Unstable"
+
+# -------- NeoGeo Full Titles -------
+# Options are English and JAPANESE
+# Not all games have an alternate Japanese Name, in that case, The English Title is used
+neogeoregion="English"
+useneogeotitles="Yes"
 
 # -------- TTY2OLED -------
 # Options for https://github.com/venice1200/MiSTer_tty2oled
