--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -1,7 +1,7 @@
 # -------- NOTES --------
 # Arcade core will work on most systems using Update_All
 
-# For Console cores make sure you are using the recommended folder structure: /media/fat/Games/SNES/ etc.
+# For Console cores make sure you are using the recommended folder structure: /media/fat/games/SNES/ etc.
 # The script supports zipped Everdrive packs or unzipped folders.
 # For PSX, MegaCD and Turbografx16 CD your games need to be in CHD format.
 
@@ -115,16 +115,16 @@ usedefaultpaths="No"
 # Default - all arcade games
 arcadepath="/media/fat/_Arcade"
 fdspath="/media/fat/games/NES"
-gbpath="/media/fat/Games/Gameboy"
-gbcpath="/media/fat/Games/Gameboy"
+gbpath="/media/fat/games/Gameboy"
+gbcpath="/media/fat/games/Gameboy"
 gbapath="/media/fat/games/GBA"
 genesispath="/media/fat/games/Genesis"
 ggpath="/media/fat/games/SMS"
 megacdpath="/media/fat/games/MegaCD"
 neogeopath="/media/fat/games/NeoGeo"
 nespath="/media/fat/games/NES"
-s32xpath="/media/fat/Games/S32X"
-smspath="/media/fat/Games/SMS"
+s32xpath="/media/fat/games/S32X"
+smspath="/media/fat/games/SMS"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
