--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -93,7 +93,7 @@ Third Bad Game.chd"
 # Folders and files you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path or file name.
 # Partial names with case insensitive spelling will suffice.
 
-exclude=( vgm nsf nes2pce spc unsupported sounds )
+exclude=( vgm readme hes-v3 unsupported sounds )
 
 # -------- ADVANCED (HANDLE WITH CARE) --------
 # When you push a button or move the mouse, interrupt SAM
