--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -21,6 +21,13 @@ menuonly="Yes"
 # Valid options: arcade gba genesis gg megacd neogeo nes sms snes tgfx16 tgfx16cd psx
 corelist="arcade,fds,gba,genesis,gg,megacd,neogeo,nes,sms,snes,tgfx16,tgfx16cd,psx"
 
+# When SAM starts, mute global Volume. Unmute when button is pushed.
+mute="No"
+
+# If "mute=Yes", what should happen when button is pushed?
+# playcurrentgame="No" - SAM will reboot to MiSTer Menu
+playcurrentgame="No" 
+
 #======== EXCLUDE LISTS ========
 # One game per line
 # Trailing quote is required!
@@ -107,7 +114,7 @@ ggpath="/media/fat/games/SMS"
 megacdpath="/media/fat/games/MegaCD"
 neogeopath="/media/fat/games/NeoGeo"
 nespath="/media/fat/games/NES"
-smspath"/media/fat/Games/SMS"
+smspath="/media/fat/Games/SMS"
 snespath="/media/fat/games/SNES"
 tgfx16path="/media/fat/games/TGFX16"
 tgfx16cdpath="/media/fat/games/TGFX16-CD"
@@ -124,11 +131,11 @@ ttyuserini="/media/fat/tty2oled/tty2oled-user.ini"
 # SAM will play every game on your system once before starting from the beginning
 norepeat="Yes"
 
-# Use the ZIP files in your game directories. It's best to leave it untouched.
-usezip="Yes"
-
 # ======== DEBUG ========
 # These are intended for debugging SAM - use with care!
+
+# Use the ZIP files in your game directories. It's best to leave it untouched.
+usezip="Yes"
 
 # Should SAM be quiet - disable for extra logging - only useful via ssh
 samquiet="Yes"
