--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -17,6 +17,10 @@ gametimer=180
 # Start SAM only from MiSTer main menu
 menuonly="Yes"
 
+# Which systems would you like to display in Attract Mode?
+# Valid options: arcade fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
+corelist="arcade,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
+
 # When SAM starts, mute global Volume. Unmute when button is pushed.
 mute="No"
 
@@ -24,10 +28,6 @@ mute="No"
 # playcurrentgame="Yes" - SAM will relaunch the current game with sound
 # playcurrentgame="No" - SAM will reboot to MiSTer Menu
 playcurrentgame="No"
-
-# Which systems would you like to display in Attract Mode?
-# Valid options: arcade fds gb gbc gba genesis gg megacd neogeo nes s32x sms snes tgfx16 tgfx16cd psx
-corelist="arcade,fds,gb,gbc,gba,genesis,gg,megacd,neogeo,nes,s32x,sms,snes,tgfx16,tgfx16cd,psx"
 
 #-------- EXCLUDE LISTS --------
 # One game per line
@@ -191,7 +191,7 @@ norepeat="Yes"
 # These are intended for debugging SAM - use with care!
 
 # Having issues with using game lists? Turn them off! Note: You won't have features like norepeat shuffle, exclusion lists and load times will also be longer.
-gamelist="Yes"
+gamelists="Dynamic"
 
 # Can be used to find issues with rom detection in SAM. Set to No to ignore zip files in your directory
 usezip="Yes"
