--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -106,6 +106,11 @@ listenmouse="Yes"
 listenkeyboard="Yes"
 listenjoy="Yes"
 
+# SAM creates game lists for each core and can store these lists in RAM (dynamic) or on SD card (static).
+# gamelists="Dynamic" means on every reboot, new gamelists are created. This might be slow but offers flexibility if you update your rom folders a lot.
+# gamelists="Static" will be a lot faster since game lists are stored permanently on SD card.
+gamelists="Static"
+
 # -------- GAME PATHS --------
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
 # Uses the default rom locations that MiSTer and all cores use by default
@@ -189,9 +194,6 @@ norepeat="Yes"
 
 # -------- DEBUG --------
 # These are intended for debugging SAM - use with care!
-
-# Having issues with using game lists? Turn them off! Note: You won't have features like norepeat shuffle, exclusion lists and load times will also be longer.
-gamelists="Dynamic"
 
 # Can be used to find issues with rom detection in SAM. Set to No to ignore zip files in your directory
 usezip="Yes"
