--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -108,7 +108,8 @@ listenjoy="Yes"
 
 # SAM creates game lists for each core and can store these lists in RAM (dynamic) or on SD card (static).
 # gamelists="Dynamic" means on every reboot, new gamelists are created. This might be slow but offers flexibility if you update your rom folders a lot.
-# gamelists="Static" will be a lot faster since game lists are stored permanently on SD card.
+# gamelists="Static" will be a lot faster since game lists are stored permanently on SD card and SAM doesn't need to browse every folder on reboot.
+
 gamelists="Static"
 
 # -------- GAME PATHS --------
