--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -116,6 +116,7 @@ gamelists="Static"
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
 # Uses the default rom locations that MiSTer and all cores use by default
 # This allows you to have your roms in /media/usb0/games, for example, without needing to edit the paths, below.
+# Default is "No" because this option is slower.
 usedefaultpaths="No"
 
 # Default - all arcade games
