--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -100,7 +100,7 @@ exclude=( vgm readme hes-v3 unsupported sounds )
 
 # SAM tries to listen for controller buttons, mouse movement, mouse buttons, and keyboard input
 # SAM attempts to detect newly added controllers and mice for monitoring
-# Note: Not all devices will be recognized - notably BlisSTer controllers in LLAPI mode, BT controllers and SNAC devices
+# Note: Not all devices will be recognized - notably BlisSTer controllers in LLAPI mode, some BT controllers and SNAC devices
 
 listenmouse="Yes"
 listenkeyboard="Yes"
