--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -7,9 +7,10 @@
 
 # -------- GENERAL OPTIONS --------
 
-# Time before Super Attract Mode starts in seconds. On reboot it will wait an additional minute for all services to load up. So SAM comes on at 60s + samtimeout
+# Time before Super Attract Mode starts in seconds. On reboot it will wait an additional minute for all services to load up.
+# SAM comes on at 60s + samtimeout, so default is a 2 mins wait in main menu before SAM starts.
 # 300 = 5 minutes, 600 = 10 minutes, 900 = 15 minutes
-samtimeout=120
+samtimeout=60
 
 # Time before going to the next core in seconds
 gametimer=180
