--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -30,6 +30,11 @@ mute="No"
 # playcurrentgame="No" - SAM will reboot to MiSTer Menu
 playcurrentgame="No"
 
+# SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
+# SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
+# While SAM is primarily meant as a way to enjoy the pixel art of random games, roulette mode let's you play those games while continuing to shuffle.
+roulettetimer="500"
+
 #-------- EXCLUDE LISTS --------
 # One game per line
 # Trailing quote is required!
