Add speedtest settings to ini

--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -118,6 +118,16 @@ listenjoy="Yes"
 
 gamelists="Static"
 
+# Set to Yes to run speed tests
+
+speedtest="No"
+
+# If you need more time after running the speedtest, to evaluate the results
+# change this to a higher number (seconds)
+# This pauses execution, and, only works if speedtest is set to Yes
+
+sleeptime=1
+
 # -------- GAME PATHS --------
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
 # Uses the default rom locations that MiSTer and all cores use by default
