--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -118,15 +118,6 @@ listenjoy="Yes"
 
 gamelists="Static"
 
-# Set to Yes to run speed tests
-
-speedtest="No"
-
-# If you need more time after running the speedtest, to evaluate the results
-# change this to a higher number (seconds)
-# This pauses execution, and, only works if speedtest is set to Yes
-
-sleeptime=1
 
 # -------- GAME PATHS --------
 # Game path customization. Useful if you only want to show certain games in your collection or use alternative media storage like `/media/usb0`
@@ -212,6 +203,14 @@ norepeat="Yes"
 
 # -------- DEBUG --------
 # These are intended for debugging SAM - use with care!
+
+# Set to Yes to run gamelist creation speed tests. This will create all gamelists at once and display how much time it takes.
+speedtest="No"
+
+# If you need more time after running the speedtest, to evaluate the results
+# change this to a higher number (seconds)
+# This pauses execution, and, only works if speedtest is set to Yes
+sleeptime=1
 
 # Can be used to find issues with rom detection in SAM. Set to No to ignore zip files in your directory
 usezip="Yes"
